--- a/config.yml
+++ b/config.yml
@@ -331,7 +331,7 @@ genesis:
           supplier: 0.7 # Suppliers earn 70% of the global inflation during all claim settlements associated with the service they provide.
           source_owner: 0.15 # Service owners earn 15% of the global inflation during all claim settlements associated with their service.
           application: 0.0 # Application earns nothing from global inflation during all claim settlements.
-        # The dao reward address SHOULD match that of the "pnf" below (i.e. `make poktrolld_addr ACC_NAME=pnf`).
+        # The dao reward address SHOULD match that of the "pnf" below (i.e. `make pocketd_addr ACC_NAME=pnf`).
         # This is the address that will receive the dao/foundation rewards during claim settlement (global mint TLM).
         # TODO_MAINNET(@olshansk): Consolidate the usage of DAO/PNF throughout the configs & codebase.
         dao_reward_address: "pokt1eeeksh2tvkh7wzmfrljnhw4wrhs55lcuvmekkw"
