--- a/Dockerfile.release
+++ b/Dockerfile.release
@@ -9,6 +9,7 @@ RUN apt-get update && \
     rm -rf /var/lib/apt/lists/*
 
 # Use `1025` G/UID so users can switch between this and `heighliner` image without a need to chown the files.
+# Ref: https://github.com/strangelove-ventures/heighliner
 RUN groupadd -g 1025 pocket && useradd -u 1025 -g pocket -m -s /sbin/nologin pocket
 
 COPY --chown=pocket:pocket release_binaries/pocket_linux_$TARGETARCH /bin/pocketd
