Checkpoint commit while working on 4_state_transfer_playbook and fixing commands everywhere

--- a/.gitignore
+++ b/.gitignore
@@ -111,6 +111,8 @@ vultr_*.json
 
 # Ignore Morse migration state working files
 tools/scripts/migration/*.json
+morse_account_state.json
+morse_state_export.json
 
 # Claude
 .claudesync/
